--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -90,5 +90,16 @@ PROD {
   switches.key="PROD/config/switches.properties"
 }
 
+logging {
+    fields {
+        app = "facia"
+    }
+    logstash {
+        host="ingest.logs.gutools.co.uk"
+        port="6379"
+        enabled=true
+    }
+}
+
 include "application.local.conf"
 include file("/etc/gu/facia-tool.application.secrets.conf")
