add kinesis log stream

--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -99,6 +99,11 @@ logging {
         port="6379"
         enabled=true
     }
+    kinesis {
+        stream = "elk-PROD-KinesisStream-1PYU4KS1UEQA"
+        region = "eu-west-1"
+        roleArn = "FrontsRoleForLogStash-FaciaToolRole-GX5KBXQZGL5X"
+    }
 }
 
 include "application.local.conf"
