--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -102,7 +102,7 @@ logging {
     kinesis {
         stream = "elk-PROD-KinesisStream-1PYU4KS1UEQA"
         region = "eu-west-1"
-        roleArn = "FrontsRoleForLogStash-FaciaToolRole-GX5KBXQZGL5X"
+        roleArn = "arn:aws:iam::743583969668:role/FrontsRoleForLogStash-FaciaToolRole-GX5KBXQZGL5X"
     }
 }
 
