update the logging fields conf

--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -100,7 +100,7 @@ logging {
         enabled=true
     }
     kinesis {
-        stream = "arn:aws:kinesis:eu-west-1:743583969668:stream/elk-PROD-KinesisStream-1PYU4KS1UEQA"
+        stream = "elk-PROD-KinesisStream-1PYU4KS1UEQA"
         region = "eu-west-1"
         roleArn = "arn:aws:iam::743583969668:role/FrontsRoleForLogStash-FaciaToolRole-GX5KBXQZGL5X"
     }
