configure permissions cache

--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -88,11 +88,14 @@ PROD {
   frontpress.sqs.tool_queue_url="https://sqs.eu-west-1.amazonaws.com/642631414762/frontend-PROD-FrontPressToolJobQueue-1V3225WE1LWQI"
 
   switches.key="PROD/config/switches.properties"
+
+  permissions.cache="permissions-cache/PROD"
+
 }
 
 logging {
     fields {
-        app = "facia"
+        app = "facia-tool"
     }
     logstash {
         host="ingest.logs.gutools.co.uk"
@@ -105,6 +108,8 @@ logging {
         roleArn = "arn:aws:iam::743583969668:role/FrontsRoleForLogStash-FaciaToolRole-GX5KBXQZGL5X"
     }
 }
+
+permissions.cache="permissions-cache/CODE"
 
 include "application.local.conf"
 include file("/etc/gu/facia-tool.application.secrets.conf")
