add assume role

--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -73,6 +73,7 @@ aws.region="eu-west-1"
 content.api.timeout.millis=2000
 
 faciatool.pandomain.service="fronts"
+faciatool.pandomain.roleArn="arn:aws:iam::753338109777:role/Fronts-panda-IAM-FaciaToolRole-NKNXCYEGL0F6"
 faciatool.sentryPublicDSN="https://4527e03d554a4962ae99a7481e9278ff@app.getsentry.com/35467"
 faciatool.show_test_containers=true
 faciatool.updates.stream="frontend-CODE-FaciaToolUpdatesStream-XWJ5HJQM1DWF"
