WIP convert switched to new switchboard

--- a/facia-tool/conf/application.conf
+++ b/facia-tool/conf/application.conf
@@ -82,7 +82,7 @@ frontpress.sqs.tool_queue_url="https://sqs.eu-west-1.amazonaws.com/642631414762/
 switches.key="CODE/config/switches.properties"
 
 switchboard.bucket="facia-switches"
-switchboard.object="CODE/switch-status"
+switchboard.object="CODE/status.json"
 
 
 PROD {
@@ -91,7 +91,7 @@ PROD {
   frontpress.sqs.tool_queue_url="https://sqs.eu-west-1.amazonaws.com/642631414762/frontend-PROD-FrontPressToolJobQueue-1V3225WE1LWQI"
 
   switches.key="PROD/config/switches.properties"
-  switchboard.object="PROD/switch-status"
+  switchboard.object="PROD/status.json"
 
   permissions.cache="permissions-cache/PROD"
 
